--- a/documentation_of_code_workflow.ipynb
+++ b/documentation_of_code_workflow.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code file includes the full process to produce the comprehensive output dataset, which can be found easily at the link:\n",
+    "\n",
+    "https://docs.google.com/spreadsheets/d/1JCpMYvMVlr_jyRRL7RkdoAfu8AFzugKB3-DxloH4AuU/edit?gid=1866890265#gid=1866890265\n",
+    "\n",
+    "Overview of process:\n",
+    "\n",
+    "Regex Algorithm → Extract Location, State, Route, Time, Altitude, Authority Advised\n",
+    "Regex Algorithm → Extract 3 letter FAA code representing information of NAVAID/airport details.\n",
+    "Web Scraping Algorithm → Extract 3 letter codes + longitude/latitude information of certain edge cases.\n",
+    "Merge on a DataFrame containing longitude, latitude, altitude of all airports, and get the latitude and longitude for majority cases where we don’t need web scraping.\n",
+    "Extracting the 3D coordinates for the airport based on longitude, latitude, altitude.\n",
+    "\n",
+    "This comprehensive data processing step allows me to go from the above messy dataset, containing all information in unparsable string format, into this dataset structure, which can easily be graphed and analyzed by anyone with basic Python programming knowledge. One of the most important key deliverables for me here is developing a very well documented Python notebook that can walk any other Berkeley student through the process of developing the below DataFrame from the FAA output. My supervisor requested this deliverable out of me, since she has a lot of students studying this topic and creating it would be helpful for her lab. \n",
+    "\t\n",
+    "Most sightings from the dataset are any UAS sightings obtained from pilots or residents. Something that may cause huge data bias issues for me is that the FAA has no way to verify whether these sightings are legitimate drones, but just keeps them as a sighting within their public records as reported. There are very few cases in which drone intrusions lead to evasive actions, but this number has been increasing since 2014. Finally, there is a lot of criticism towards the FAA due to its poor management of its data records, which I can see as I analyze them, which is a data quality issue I have to deal with. However, the data is government-obtained, which means it is a trustable source, just a source that might be lacking in 100% quality.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -41,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -272,13 +293,11 @@
     "\n",
     "dataset_folder = \"all_datasets\"\n",
     "\n",
-    "# Find all .xlsx files in the folder\n",
     "xlsx_files = glob.glob(os.path.join(dataset_folder, \"*.xlsx\"))\n",
     "\n",
-    "# Read and concatenate all Excel files into one DataFrame\n",
+    "# concatenate all files into one\n",
     "df_all = pd.concat([pd.read_excel(file) for file in xlsx_files], ignore_index=True)\n",
     "\n",
-    "# Display shape or head to confirm\n",
     "print(df_all.shape)\n",
     "df_all.head()"
    ]
