--- a/eda.ipynb
+++ b/eda.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "[7367 rows x 26 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "9                     Orlando International Airport  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
        "9                     Orlando International Airport"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,32 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'Day of Sighting', 'State', 'City', 'Summary', 'Date',\n",
-       "       'code', 'Direction', 'Time', 'Authority Advised', 'Route', 'Location',\n",
-       "       'Altitude', 'ident', 'type', 'name', 'elevation_ft', 'continent',\n",
-       "       'iso_country', 'iso_region', 'municipality', 'icao_code', 'iata_code',\n",
-       "       'gps_code', 'local_code', 'coordinates'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ca_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +760,7 @@
        "9       EMT                  13       El Monte"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1160,7 @@
        "[7582 rows x 30 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1247,49 +1222,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting contextily\n",
-      "  Downloading contextily-1.6.2-py3-none-any.whl (17 kB)\n",
-      "Requirement already satisfied: matplotlib in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (3.8.4)\n",
-      "Collecting xyzservices\n",
-      "  Downloading xyzservices-2025.1.0-py3-none-any.whl (88 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m88.4/88.4 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting mercantile\n",
-      "  Downloading mercantile-1.2.1-py3-none-any.whl (14 kB)\n",
-      "Requirement already satisfied: rasterio in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (1.3.10)\n",
-      "Requirement already satisfied: joblib in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (1.4.2)\n",
-      "Requirement already satisfied: geopy in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (2.4.1)\n",
+      "Requirement already satisfied: contextily in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (1.6.2)\n",
       "Requirement already satisfied: pillow in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (10.4.0)\n",
       "Requirement already satisfied: requests in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (2.32.2)\n",
+      "Requirement already satisfied: rasterio in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (1.3.10)\n",
+      "Requirement already satisfied: joblib in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (1.4.2)\n",
+      "Requirement already satisfied: xyzservices in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (2025.1.0)\n",
+      "Requirement already satisfied: mercantile in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (1.2.1)\n",
+      "Requirement already satisfied: matplotlib in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (3.8.4)\n",
+      "Requirement already satisfied: geopy in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from contextily) (2.4.1)\n",
       "Requirement already satisfied: geographiclib<3,>=1.52 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from geopy->contextily) (2.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (24.1)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (3.0.9)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (4.51.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (2.9.0.post0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (1.2.0)\n",
       "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (1.4.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (2.9.0.post0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (0.11.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (3.0.9)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (1.2.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (4.51.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (24.1)\n",
       "Requirement already satisfied: numpy>=1.21 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from matplotlib->contextily) (1.26.4)\n",
       "Requirement already satisfied: click>=3.0 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from mercantile->contextily) (8.1.7)\n",
-      "Requirement already satisfied: cligj>=0.5 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (0.7.2)\n",
-      "Requirement already satisfied: affine in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (2.4.0)\n",
-      "Requirement already satisfied: setuptools in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (65.6.3)\n",
-      "Requirement already satisfied: attrs in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (23.1.0)\n",
-      "Requirement already satisfied: certifi in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (2024.7.4)\n",
-      "Requirement already satisfied: snuggs>=1.4.1 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (1.4.7)\n",
       "Requirement already satisfied: click-plugins in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (1.1.1)\n",
+      "Requirement already satisfied: affine in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (2.4.0)\n",
+      "Requirement already satisfied: certifi in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (2024.7.4)\n",
+      "Requirement already satisfied: attrs in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (23.1.0)\n",
+      "Requirement already satisfied: setuptools in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (65.6.3)\n",
+      "Requirement already satisfied: cligj>=0.5 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (0.7.2)\n",
+      "Requirement already satisfied: snuggs>=1.4.1 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from rasterio->contextily) (1.4.7)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from requests->contextily) (1.26.19)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from requests->contextily) (3.7)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from requests->contextily) (2.0.4)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib->contextily) (1.16.0)\n",
-      "Installing collected packages: xyzservices, mercantile, contextily\n",
-      "Successfully installed contextily-1.6.2 mercantile-1.2.1 xyzservices-2025.1.0\n"
+      "Requirement already satisfied: six>=1.5 in /Users/vishalivallioor/anaconda3/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib->contextily) (1.16.0)\n"
      ]
     }
    ],
